...
        return view
    }()
    
    private lazy var logoutButton: UIButton = {
        let button = UIButton()
        let buttonImage = UIImage(named: "exit")
        button.accessibilityIdentifier = "logout button"
        button.setImage(buttonImage, for: .normal)
        button.addTarget(self, action: #selector(didTapLogoutButton), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
...
    }
    
    func logoutButtonWasTapped() {
        let alertModel = AlertModel(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            firstButtonText: "Да", secondButtonText: "Нет"
        ) { [weak self] in
            guard let self else { return }
            presenter?.logout()
        }
        AlertPresenter.showAlert(model: alertModel, vc: self)
    }
...
